[gd_scene load_steps=2 format=3 uid="uid://d1x845psnwmx0"]

[ext_resource type="Script" uid="uid://bn5ta1doo6daq" path="res://Scripts/LobbySelectionUI.gd" id="1_1wrvr"]

[node name="LobbySelectionUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_1wrvr")

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="MainVBox"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="MainVBox"]
layout_mode = 2

[node name="HostOptionsBox" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MainVBox/HostOptionsBox"]
layout_mode = 2
text = "Tipo de Partida:"

[node name="LobbyTypeOption" type="OptionButton" parent="MainVBox/HostOptionsBox"]
layout_mode = 2

[node name="ButtonBox" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HostButton" type="Button" parent="MainVBox/ButtonBox"]
layout_mode = 2
text = "Crear Partida"

[node name="JoinButton" type="Button" parent="MainVBox/ButtonBox"]
layout_mode = 2
disabled = true
text = "Unirse a la Partida"

[node name="LobbyList" type="ItemList" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="MainVBox/ButtonBox/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MainVBox/ButtonBox/JoinButton" to="." method="_on_join_button_pressed"]
